--- a/Project04/style.css
+++ b/Project04/style.css
@@ -51,5 +51,19 @@ h1{
     margin-top: 3vh;
 }
 .guesses{
+    margin-top: -2.3vh;
+    margin-left: 8vw;
+}
+
+.lastResult{
+    margin-left: 10vw;
+    margin-top: -2.3vh;
+}
+
+#last{
+    margin-top: 5vh;
+}
+
+.lowOrHi{
     margin-top: 3vh;
 }
